<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/liner1"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_height="25dp"
            android:src="@drawable/heart"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="25dp"
            android:textColor="#000"
            android:text="@string/measurement"/>


    </LinearLayout>


    <LinearLayout
        android:id="@+id/liner2"
        android:layout_below="@id/liner1"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_height="25dp"
            android:src="@drawable/diary"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="25dp"
            android:textColor="#000"
            android:text="@string/diary"/>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/liner3"
        android:layout_below="@id/liner2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="25dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/refills" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="25dp"
            android:text="@string/refills"
            android:textColor="#000" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/liner4"
        android:layout_below="@id/liner3"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_height="25dp"
            android:src="@drawable/appo"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="25dp"
            android:textColor="#000"
            android:text="@string/appointment"/>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/liner5"
        android:layout_below="@id/liner4"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_height="25dp"
            android:src="@drawable/doctor"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="25dp"
            android:textColor="#000"
            android:text="@string/doctor"/>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/liner6"
        android:layout_below="@id/liner5"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_height="25dp"
            android:src="@drawable/report"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="25dp"
            android:textColor="#000"

            android:text="@string/report"/>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/liner7"
        android:layout_below="@id/liner6"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_height="20dp"
            android:src="@drawable/settings"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="25dp"
            android:textColor="#000"
            android:text="@string/settings"/>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/liner8"
        android:layout_below="@id/liner7"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_height="20dp"
            android:src="@drawable/help"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="25dp"
            android:textColor="#000"
            android:text="@string/help"/>


    </LinearLayout>

    <LinearLayout
        android:gravity="bottom"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_marginBottom="55dp"
        android:layout_marginTop="35dp"
        android:background="@color/upgrade"
        android:layout_height="50dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/updradebackground" />



    </LinearLayout>

</RelativeLayout>